# Birl_Tuner

./: .gitignore  CMakeLists.txt  README.md  linuxtoolchain.cmake
source/: Birl.h  Filters.h  Plot.cpp  RegisterHole.cpp  Tube.h  Tune.cpp  TuneA.cpp  Tuning.h  TuningOpt.cpp  Tuning_bonus.h  Yin.cpp  Yin.h  sfx.cpp  sfx.h  ui.h
